# cpp-template

./: .clang-tidy  .gitignore  CMakeLists.txt  add.cpp  add.hpp  conanfile.txt  export.hpp  main.cpp
.github/configure-project/: action.yaml
.github/workflows/: ci.yaml
include/: add.hpp  sub.hpp
src/: CMakeLists.txt  add.cpp  main.cpp  sub.cpp
test/: CMakeLists.txt  test.cpp
